--- a/HoC.html
+++ b/HoC.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-
 		<title>Hot || Cold</title>
-
 		<!-- Meta Tags -->
 		<meta charset="utf-8"/>
-
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="styles/reset.css">
-		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,900italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Alegreya:400,900' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles/style.css"/> 
-
-		<!-- JavaScript -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
-
 	</head>
 	<body>
-
 		<header> <!--Header -->
-
 			<!-- Top Navigation -->
 			<nav> 
 				<ul class="clearfix">
@@ -28,8 +18,6 @@
 					<li><a class="new" href="#">+ New Game</a></li>
 				</ul>
 			</nav>
-
-			<!-- Modal Information Box -->
 			<div class="overlay" id="modal">
 				<div class="content">
 					<h3>What do I do?</h3>
@@ -42,30 +30,23 @@
 						</ul>
 						<p>So, Are you ready?</p>
 						<a class="close" href="#">Got It!</a>
-					</div>
-				</div>
-			</div>
-
+					</div><!--  -->
+				</div><!--end .content-->
+			</div><!--end .overlay-->
 			<!-- logo text -->
-			<h1>HOT or COLD</h1>
-
+			<h1><span class="hot">HOT</span> or <span class="cold">COLD</span></h1>
 		</header>
-
 		<section class="game"> <!-- Guessing Section -->
-
 			<h2 id="feedback">Make your Guess!</h2>
-
 			<form>
 				<input type="text" name="userGuess" id="userGuess" class="text" maxlength="3" autocomplete="off" placeholder="Enter your Guess" required/>
       			<input type="submit" id="guessButton" class="button" name="submit" value="Guess"/>
 			</form>
-
       		<p>Guess #<span id="count">0</span>!</p>
-
 			<ul id="guessList" class="guessBox clearfix">
-
 			</ul>
-
 		</section>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
 	</body>
 </html>
